# blindfold

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
code/model_owner_code/: infer.py  mock_infer.py
code/researcher_code/post_run/: judge.py  report.py  result.py  scoring.py
code/researcher_code/to_submit/: audit_core.py  benchmark.py  main.py  record.py
data/: README.md  benchmark.csv  build_benchmark.py
data/sources/: MultiJail.csv  benchmark_jailbreak.csv  benchmark_tgl.csv
notebooks/: 1. enclave_eval_inmem.ipynb
notebooks/nbsplit/: 1. DO-model-owner-phogpt.ipynb  1. DO-model-owner-qwen.ipynb  2. DO-benchmark-owner-phogpt.ipynb  2. DO-benchmark-owner-qwen.ipynb  3. DS-researcher-phogpt.ipynb  3. DS-researcher-qwen.ipynb
results/: cross-model-report.md
results/phogpt-4b_20260621-141831/: REPORT.md  results.csv  scorecard.csv  scored.csv
results/qwen2.5-0.5b_20260621-111838-sequential/: results.csv  scorecard.csv  scored.csv
results/qwen2.5-0.5b_20260621-113555/: REPORT.md  scored.csv
results/qwen2.5-0.5b_20260621-121305/: REPORT.md  scored.csv
results/qwen2.5-0.5b_20260622-015900/: scorecard.csv  scored.csv
results/qwen2.5-3b_20260621-150628/: REPORT.md  results.csv  scorecard.csv  scored.csv
results/seallm-v3-7b_20260621-145555/: REPORT.md  results.csv  scorecard.csv  scored.csv
scripts/: download_models.py
submission/: BRIEF.md  blindfold_deck.pptx  blindfold_report.tex  make_chart.py  make_hero.py
submission/deckbuild/: build.js  package-lock.json  package.json
tests/: test_benchmark.py  test_report.py  test_scoring.py
